# tree-sitter-typst

./: .clang-format  .eslintrc.json  .gitignore  Cargo.toml  LICENSE  binding.gyp  default.nix  flake.nix  grammar.js  grammar.md  justfile  package.json  readme.md
bindings/node/: binding.cc  index.js
src/: grammar.json  node-types.json  parser.c  scanner.c
test/corpus/: code.txt  graphics.txt  literals.txt  markup.txt  source_files.txt
