[package]
name = "tree-sitter-typst"
description = "typst grammar for the tree-sitter parsing library"
version = "0.0.1"
keywords = ["incremental", "parsing", "typst"]
categories = ["parsing", "text-editors"]
repository = "https://github.com/tree-sitter/tree-sitter-typst"
readme = "bindings/rust/README.md"
edition = "2018"
license = "MIT"

build = "bindings/rust/build.rs"
include = [
  "bindings/rust/*",
  "grammar.js",
  "queries/*",
  "src/*",
]
autoexamples = false

[lib]
path = "bindings/rust/lib.rs"

[dependencies]
tree-sitter = "~0.20.3"

[build-dependencies]
cc = "1.0"
